2.4.6
[fix] oauth short link generation w/ python 3
[rem] Remove deprecated scope chat_login

2.4.5
[rem] Remove deprecated api Communities and related content

2.4.4
[fix] unable to clean up class left in memory; N9XBMCAddon7xbmcgui6WindowE |contrib: lekma|

2.4.3
[fix] ads causing playback issues with InputStream Adaptive
[fix] migrate url shortener from Google URL Shortener to Google Firebase Dynamic Links
[upd] move Live Notifications to it's own thread

2.4.2
[fix] fixed issue with Live Notifications if no followed channels are live

2.4.1
[chg] Settings and Refresh menu items to unplayable items instead of folders

2.4.0
[add] allow limiting framerate to 30 fps when video quality is set to Source
[fix] change import from absolute to relative
[chg] clips default to source quality instead of always ask
[chg] refresh live previews by adding timestamp to urls
[upd] re-write of search history
[upd] use SPDX license identifiers

2.3.5
[fix] utf-8 file paths
[fix] perpetual busy dialogs in Kodi 18

2.3.4
[fix] clean_title_value UnicodeDecodeError
[fix] Game titles UnicodeEncodeError
[fix] python 3 compat. urllib.quote_plus

2.3.3
[fix] Description template UnicodeDecodeError
[chg] Use unicode punctuation space in description template

2.3.2
[fix] py3 encoding issues

2.3.1
[fix] i18n UnicodeEncodeError

2.3.0
[chg] refactor complex entry points
[upd] Python 3 compat.

2.2.4
[fix] VOD's error 404

2.2.3
[add] Thumbnail size, Settings - General
[fix] encoding and replace in clean_title_value
[fix] unplayable videos on some systems, set curl opt verifypeer=false on playback urls

2.2.2
[add] refresh item to streams search when there are no results
[upd] close chat on playback stopped [ccope]
[upd] service start parameter to login

2.2.1
[add] allow Adaptive as default quality

2.2.0
[add] Search history
[add] Settings - Maintenance
[fix] VodCast highlighting

2.1.1
[fix] video default qualities
[fix] setContentLookup AttributeError

2.1.0
[chg] string paths