@@ -3,7 +3,7 @@
     <requires>
         <import addon='xbmc.python' version='2.20.0'/>
         <import addon='script.module.six' version='1.11.0'/>
-        <import addon='script.module.python.twitch' version='2.0.7'/>
+        <import addon='script.module.python.twitch' version='2.0.9'/>
         <import addon='script.module.requests' version='2.9.1'/>
     </requires>
     <extension point='xbmc.python.pluginsource' library='resources/lib/addon_runner.py'>
@@ -13,6 +13,8 @@
     <extension point='xbmc.addon.metadata'>
         <platform>all</platform>
         <news>
+[add] Settings - Login - Private API Credentials
+[fix] basic playback, set default Private API Credentials - Client ID
 [fix] oauth short link generation w/ python 3
 [rem] Remove deprecated scope chat_login
         </news>
