@@ -7,6 +7,9 @@
         <setting label="30135" id="show_token_url" type="action" action="RunPlugin(plugin://$ID/?mode=get_token_url)" option="close"/>
         <setting label="30138" type="lsep"/>
         <setting label="30227" id="revoke_token" type="action" action="RunPlugin(plugin://$ID/?mode=revoke_token)" option="close"/>
+        <setting label="30261" type="lsep"/>
+        <setting id="private_oauth_clientid" type="text" label="30097" default="kimne78kx3ncx6brgo4mv6wki5h1ko"/>
+        <setting id="private_oauth_token" type="text" label="30099" default=""/>
     </category>
     <!-- Main Menu -->
     <category label="30219">
